--- a/frontend/src/app/pagina/decks/decks.page.html
+++ b/frontend/src/app/pagina/decks/decks.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="success">
 <ion-menu-button slot = "start"></ion-menu-button>
-    <ion-title>Flash Cards</ion-title>
+    <ion-title>Decks criados</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -12,6 +12,8 @@
     <div class="card" (click)="toggleCardRotation('card' + (i + 1))" [ngClass]="{'virado': isCardFlipped['card' + (i + 1)]}">
       <div class="front">{{ flashcard.pergunta }}</div>
       <div class="back">{{ flashcard.resposta }}</div>
+      
     </div>
+    <button (click)="deleteFlashcard(flashcard)" class="delete-button">Deletar</button>
   </div>
 </ion-content>
