--- a/frontend/src/app/pagina/decks/decks.page.scss
+++ b/frontend/src/app/pagina/decks/decks.page.scss
@@ -52,3 +52,13 @@ body {
 .card.virado {
     transform: rotateY(180deg);
 }
+.delete-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: red; /* Exemplo de estilo */
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    cursor: pointer;
+  }
