--- a/frontend/src/app/pagina/decks/decks.page.html
+++ b/frontend/src/app/pagina/decks/decks.page.html
@@ -12,8 +12,7 @@
     <div class="card" (click)="toggleCardRotation('card' + (i + 1))" [ngClass]="{'virado': isCardFlipped['card' + (i + 1)]}">
       <div class="front">{{ flashcard.pergunta }}</div>
       <div class="back">{{ flashcard.resposta }}</div>
-      
     </div>
-    <button (click)="deleteFlashcard(flashcard)" class="delete-button">Deletar</button>
+    <button (click)="confirmDelete(flashcard)" class="delete-button">Deletar</button>
   </div>
 </ion-content>
