--- a/frontend/src/app/pagina/decks/decks.page.scss
+++ b/frontend/src/app/pagina/decks/decks.page.scss
@@ -65,8 +65,7 @@ body {
   }
   
   
-  .delete-button,
-  .update-button {
+  .delete-button{
     background-color: red;
     color: white;
     border: none;
@@ -74,4 +73,11 @@ body {
     cursor: pointer;
     margin-left: 5px; /* Adicionando margem entre os botões */
   }
-  
+  .update-button {
+    background-color: rgb(177, 169, 169);
+    color: rgb(17, 16, 16);
+    border: none;
+    padding: 8px 16px;
+    cursor: pointer;
+    margin-left: 5px; /* Adicionando margem entre os botões */
+  }
