--- a/frontend/src/app/pagina/cards/cards.page.html
+++ b/frontend/src/app/pagina/cards/cards.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="success">
 <ion-menu-button slot = "start"></ion-menu-button>
-    <ion-title>Decks criados</ion-title>
+    <ion-title>Cards criados</ion-title>
   </ion-toolbar>
 </ion-header>
 
