--- a/frontend/src/app/pagina/decks/decks.page.html
+++ b/frontend/src/app/pagina/decks/decks.page.html
@@ -5,10 +5,18 @@
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">decks</ion-title>
+      <ion-title size="large">Decks</ion-title>
     </ion-toolbar>
   </ion-header>
+  
+  <!-- Lista de decks como hiperlinks -->
+  <ion-list>
+    <ion-item *ngFor="let deckName of decks" (click)="goToDeck(deckName)">
+      <ion-label>{{ deckName }}</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
