--- a/frontend/src/app/pagina/decks/decks.page.html
+++ b/frontend/src/app/pagina/decks/decks.page.html
@@ -6,13 +6,7 @@
 </ion-header>
 
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Decks</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  
+<ion-content>
   <!-- Lista de decks como hiperlinks -->
   <ion-list>
     <ion-item *ngFor="let deckName of decks" (click)="goToDeck(deckName)">
