--- a/frontend/src/app/pagina/decks/decks.page.scss
+++ b/frontend/src/app/pagina/decks/decks.page.scss
@@ -1,3 +1,13 @@
+h1{
+    font-size: 20px;
+   margin-left: 10px;
+   text-decoration: solid;
+    
+}
+.lista{
+    font-size: 20px;
+    text-decoration: underline;
+}
 body {
     height: 100vh;
     display: flex;
